<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pokelike 1.6</string>
    <string name="download_started">Download started</string>
    <string name="file_picker_unavailable">File picker unavailable</string>
    <string name="link_unavailable">No app can open this link</string>
    <string name="back">← Back</string>
    <string name="cup">Cup</string>
    <string name="pokedex">Pokédex</string>
    <string name="settings">Settings</string>
    <string name="rerun">Rerun</string>
    <string name="loading">LOADING</string>
</resources>
